--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.24.0",
     "recharts": "^2.12.7",
     "sweetalert2": "^11.12.2"
