--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
+    "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.19.0",
     "chart.js": "^4.4.3",
     "jodit-react": "^4.1.2",
@@ -19,8 +20,10 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-otp-input": "^3.1.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "recharts": "^2.12.7",
+    "sonner": "^1.5.0",
     "sweetalert2": "^11.12.2"
   },
   "devDependencies": {
