--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
+    "react-toastify": "^11.0.2",
     "recharts": "^2.12.7",
-    "sonner": "^1.5.0",
+    "sonner": "^1.7.1",
     "sweetalert2": "^11.12.2"
   },
   "devDependencies": {
