--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.24.0",
     "react-toastify": "^11.0.2",
     "recharts": "^2.12.7",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.7.1",
     "sweetalert2": "^11.12.2"
   },
